fix: align static and editable table text cell sizing (fixes SFKUI-7862)

--- a/packages/design/src/components/table-ng/_cell.scss
+++ b/packages/design/src/components/table-ng/_cell.scss
@@ -6,11 +6,14 @@ $vertical-padding: core.densify(size.$padding-025);
 $horizontal-padding: size.$padding-050;
 $underline-thickness: 3px;
 $editable-min-height: calc(var(--f-font-size-standard) * var(--f-line-height-large) + ($vertical-padding * 2) + ($table-ng-selection-outline * 2));
+$editable-margin-block: 2px;
+$editable-border-width: 3px;
+$cell-border-width: 1px;
 
 .table-ng__cell {
     padding: $vertical-padding $horizontal-padding;
     text-wrap: nowrap;
-    border: 1px solid transparent;
+    border: $cell-border-width solid transparent;
 
     &:focus,
     &:focus-within {
@@ -83,7 +86,7 @@ $editable-min-height: calc(var(--f-font-size-standard) * var(--f-line-height-lar
 
     &--select {
         .table-ng__editable {
-            border: 3px solid transparent;
+            border: $editable-border-width solid transparent;
             box-sizing: border-box;
         }
     }
@@ -115,7 +118,7 @@ $editable-min-height: calc(var(--f-font-size-standard) * var(--f-line-height-lar
         }
 
         .table-ng__editable {
-            border: 3px solid transparent;
+            border: $editable-border-width solid transparent;
             box-sizing: border-box;
             position: relative;
 
@@ -200,9 +203,18 @@ $editable-min-height: calc(var(--f-font-size-standard) * var(--f-line-height-lar
         text-align: left;
     }
 
+    &--static {
+        .table-ng__cell--static__text {
+            display: flex;
+            align-items: center;
+            min-block-size: calc($editable-min-height - ($editable-margin-block * 2));
+            border: $editable-border-width solid transparent;
+        }
+    }
+
     &--custom {
         padding: $vertical-padding $horizontal-padding;
-        border: 1px solid transparent;
+        border: $cell-border-width solid transparent;
 
         &:focus {
             box-shadow: none;
@@ -241,7 +253,7 @@ $editable-min-height: calc(var(--f-font-size-standard) * var(--f-line-height-lar
     padding: $vertical-padding $horizontal-padding;
     display: flex;
     align-items: center;
-    margin-block: 2px;
+    margin-block: $editable-margin-block;
 
     &__text {
         flex: 1 1 auto;
@@ -258,6 +270,11 @@ $editable-min-height: calc(var(--f-font-size-standard) * var(--f-line-height-lar
 
 @media (forced-colors: active) {
     .table-ng__editable {
+        forced-color-adjust: none;
+        color: CanvasText;
+    }
+
+    .table-ng__cell--static__text {
         forced-color-adjust: none;
         color: CanvasText;
     }
